tests/fail/derive_struct_attributes.stderr
error: FromScanf: structs must have a format string as an attribute.
       Please add either of #[sscanf(format = "...")], #[sscanf(format_unescaped = "...")] or #[sscanf("...")]
 --> tests/fail/derive_struct_attributes.rs:2:8
  |
2 | struct Test1;
  |        ^^^^^

error: unrecognized arguments
 --> tests/fail/derive_struct_attributes.rs:5:21
  |
5 | #[sscanf(format = "", format_unescaped = "")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^

error: unrecognized arguments
 --> tests/fail/derive_struct_attributes.rs:9:21
  |
9 | #[sscanf(format = "", bob = "")]
  |                     ^^^^^^^^^^

error: unrecognized arguments
  --> tests/fail/derive_struct_attributes.rs:13:22
   |
13 | #[sscanf(format = "" bob = "")]
   |                      ^^^^^^^^

error: expected string literal
  --> tests/fail/derive_struct_attributes.rs:17:19
   |
17 | #[sscanf(format = 5)]
   |                   ^

error: expected `"..."` after `=`
  --> tests/fail/derive_struct_attributes.rs:21:17
   |
21 | #[sscanf(format =)]
   |                 ^

error: expected `=`
  --> tests/fail/derive_struct_attributes.rs:25:17
   |
25 | #[sscanf(format "")]
   |                 ^^

error: expected a format string as either `format = "..."`, `format_unescaped = "..."`, or just `"..."`
  --> tests/fail/derive_struct_attributes.rs:29:10
   |
29 | #[sscanf(= "")]
   |          ^^^^

error: `default` arguments are only valid on fields
  --> tests/fail/derive_struct_attributes.rs:33:10
   |
33 | #[sscanf(default)]
   |          ^^^^^^^

error: `default` arguments are only valid on fields
  --> tests/fail/derive_struct_attributes.rs:37:10
   |
37 | #[sscanf(default = "")]
   |          ^^^^^^^

error: `map` arguments are only valid on fields
  --> tests/fail/derive_struct_attributes.rs:41:10
   |
41 | #[sscanf(map = |x: usize| { x })]
   |          ^^^
